@@ -13,6 +13,8 @@ For a complete change history, please see the Subversion log comments.
 
 Current Version
 ---------------
+- Fixed MSSQL2008 driver returning invalid extent (#3498)
+
 - Fix computation of shape bounds when the first line contains no points
   (#3119)(fixes #3383)
 
